[project]
name = "topoquant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "catppuccin-jupyterlab>=0.2.4",
  "jupyter>=1.1.1",
  "matplotlib>=3.10.8",
  "mlfinpy>=0.1.2",
  "openbb>=4.6.0",
  "pandas < 3.0.0",
  "pandas-datareader>=0.10.0",
  "scikit-learn>=1.8.0",
  "seaborn>=0.13.2",
]
